syntax = "proto3";

import "response.proto";

package YrcfAgent;
option go_package = "yrcf_grpc_case/grpc/cidrpriority/proto/;cidrpriority";
message QosSlaValue {
    // "ps" refers to "per second"
    uint64 read_times_ps  = 1;
    uint64 write_times_ps = 2;
    uint64 total_times_ps = 3;
    uint64 read_bytes_ps  = 4;
    uint64 write_bytes_ps = 5;
    uint64 total_bytes_ps = 6;
    uint64 mds_ops        = 7;
}

message QosSla {
    string path        = 1;
    string entry_info  = 2;
    QosSlaValue value  = 3;
}

// message for rpc GetSlaData
message GetQosSlaRequest {
    bool use_absolute_path = 1;

    // specify which dir you want to get
    // if no path is specified, all info are returned
    string path = 2;
}
message GetQosSlaResponse {
    ResMes result           = 1;
    repeated QosSla Qos_sla = 2;
}

service GetQosSla {
  rpc GetQosSla(GetQosSlaRequest) returns (GetQosSlaResponse) {}
}